# ax-exchange-sdk

./: Cargo.toml  README.md  makefile  shell.nix
.claude/skills/ax-api-integration/: SKILL.md
.github/workflows/: common.yaml
examples/: create_client.rs  order_lifecycle.rs  price_streaming.rs
src/: client.rs  constants.rs  lib.rs  routing.rs  types.rs  ws_utils.rs
src/api_gateway/: mod.rs  rest_client.rs
src/marketdata/: mod.rs  ws_client.rs
src/order_gateway/: rest_client.rs  ws_client.rs
src/protocol/: api_gateway.rs  auth_gateway.rs  common.rs  marketdata.rs  marketdata_publisher.rs  mod.rs  order_gateway.rs  order_gateway_v2.rs  symbology.rs  websocket.rs  ws.rs
src/protocol/common/: sequence.rs
src/types/: auth.rs  days_of_week.rs  environment.rs  ep3.rs  funding_rate_schedule.rs  mod.rs  order_id.rs  orderbook.rs  trading.rs  ws.rs
tests/: integration_tests.rs  readme_tests.rs  smoke_tests.rs  test_funding_rate_schedule.rs
tests/common/: mod.rs
