[package]
authors = ["Architect Financial Technologies LLC"]
categories = ["finance"]
description = "ArchitectX SDK"
documentation = "https://docs.rs/ax-exchange-sdk"
edition = "2021"
homepage = "https://architect.exchange"
keywords = ["trading", "finance"]
license = "AGPL-3.0-only"
name = "ax-exchange-sdk"
version = "13.30.0"

[features]
all = ["schemars", "utoipa"]
smoke-tests = ["tokio/macros", "tokio/rt-multi-thread"]
sqlx = ["dep:sqlx"]

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
arcstr = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
derive_more = { workspace = true }
enumflags2 = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["chrono", "schemars_1"] }
sqlx = { workspace = true, optional = true }
strum = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
ulid = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true, features = ["json"] }
serde_urlencoded = { workspace = true }
