[package]
authors = ["Architect Financial Technologies LLC"]
categories = ["finance"]
description = "ArchitectX SDK"
documentation = "https://docs.rs/ax-exchange-sdk"
edition = "2021"
homepage = "https://architect.exchange"
keywords = ["trading", "finance"]
license = "AGPL-3.0-only"
name = "ax-exchange-sdk"
version = "13.35.0"

[features]
all = ["dep:schemars", "dep:utoipa"]
utoipa = ["dep:utoipa"]
schemars = ["dep:schemars"]
smoke-tests = ["tokio/macros", "tokio/rt-multi-thread"]
sqlx = ["dep:sqlx"]

[dependencies]
anyhow = "1.0.102"
arc-swap = "1.9.0"
arcstr = "1.2.0"
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["full"] }
enumflags2 = "0.7.12"
futures = "0.3.32"
lazy_static = "1.5.0"
log = "0.4.29"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "query"] }
rust_decimal = "1.41.0"
schemars = { version = "1.2.1", optional = true }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.149", features = ["raw_value"] }
serde_with = { version = "3.18.0", features = ["chrono"] }
sqlx = { version = "0.8.6", optional = true }
strum = { version = "0.28.0", features = ["derive", "strum_macros"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
ulid = "1.2.1"
url = "2.5.8"
utoipa = { version = "5.4.0", optional = true }

[dev-dependencies]
dotenv = "0.15.0"
insta = { version = "1.47.0", features = ["json"] }
regex = "1.12.3"
serde_urlencoded = "0.7.1"
simple_logger = "5.2.0"
